--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,12 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.openhft.com.binance.api/binance-api-client -->
         <dependency>
-            <groupId>com.binance.api</groupId>
+            <groupId>net.openhft.com.binance.api</groupId>
             <artifactId>binance-api-client</artifactId>
-            <version>1.0.1</version>
+            <version>2.17.1</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
